Some refactoring again, and added function for lexicon extraction out of corpus DataFrame

--- a/Chaining search.ipynb
+++ b/Chaining search.ipynb
@@ -209,7 +209,7 @@
     "from chaininglib.search.LexiconQuery import *\n",
     "from IPython.core.display import display, HTML\n",
     "from chaininglib.search.corpusQueries import corpus_query\n",
-    "from chaininglib.process.lexicon import diamant_get_synonyms\n",
+    "from chaininglib.process.lexicon import get_diamant_synonyms\n",
     "from chaininglib.ui.dfui import display_df\n",
     "\n",
     "search_word = \"boek\"\n",
@@ -219,7 +219,7 @@
     "# First, lookup synonyms in DiaMaNT\n",
     "lq = create_lexicon(lexicon_name).lemma(search_word)\n",
     "df_lexicon = lq.results()\n",
-    "syns = diamant_get_synonyms(df_lexicon) \n",
+    "syns = get_diamant_synonyms(df_lexicon) \n",
     "syns.add(search_word) # Also add search word itself\n",
     "display(HTML('Synoniemen voor <b>' + search_word + '</b>: ' + \", \".join(syns)))\n",
     "\n",
@@ -400,8 +400,7 @@
     "    # Put the results into an array, so we can loop through the found lemmata\n",
     "    lexicon_lemmata_arr = [w.lower() for w in df_lexicon[\"writtenForm\"]]\n",
     "\n",
-    "    # Instantiate a DataFrame with one single column 'lemmata',\n",
-    "    # in which we will gather all single lemmata occurences\n",
+    "    # Instantiate a DataFrame, in which we will gather all single lemmata occurences\n",
     "    df_full_list = pd.DataFrame()\n",
     "\n",
     "\n",
@@ -683,7 +682,6 @@
     "    # store the results\n",
     "    dfs_all_corpora.append(df_corpus)\n",
     "\n",
-    "\n",
     "# get a tagger trained with our corpus data\n",
     "tagger = get_tagger(dfs_all_corpora)\n",
     "\n",
@@ -785,18 +783,518 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Case study 12: gather data from several corpora and generate a lexicon out of that"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "querying chn...\n",
+      "\u001b[Fquerying opensonar...                                               \n",
+      "\u001b[F                                                                    querying zeebrieven...\n",
+      "\u001b[Fquerying gysseling...                                               \n",
+      "\u001b[Fquerying nederlab...at page 1...                                                                    \n",
+      "\u001b[Fextracting lexicon... page 1...                                                                    \n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>lemma</th>\n",
+       "      <th>universal_dependency</th>\n",
+       "      <th>word</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>aan</td>\n",
+       "      <td>ADP</td>\n",
+       "      <td>an</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>aandoen</td>\n",
+       "      <td>VERB</td>\n",
+       "      <td>an ghedaen.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>aankomen</td>\n",
+       "      <td>VERB</td>\n",
+       "      <td>koomen</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>aanlopen</td>\n",
+       "      <td>VERB</td>\n",
+       "      <td>aen</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>aanlopen</td>\n",
+       "      <td>VERB</td>\n",
+       "      <td>loopen</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>aarde</td>\n",
+       "      <td>NOUN</td>\n",
+       "      <td>arden</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>aarde</td>\n",
+       "      <td>NOUN</td>\n",
+       "      <td>erde</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>accijns</td>\n",
+       "      <td>NOUN</td>\n",
+       "      <td>assize</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>achtentwintigste</td>\n",
+       "      <td>NUM</td>\n",
+       "      <td>28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>af</td>\n",
+       "      <td>ADP</td>\n",
+       "      <td>af</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>al</td>\n",
+       "      <td>ADV</td>\n",
+       "      <td>al</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>al</td>\n",
+       "      <td>NUM</td>\n",
+       "      <td>alle</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>al</td>\n",
+       "      <td>NUM</td>\n",
+       "      <td>al.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>al</td>\n",
+       "      <td>PRON</td>\n",
+       "      <td>alre</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>al</td>\n",
+       "      <td>PRON OR DET</td>\n",
+       "      <td>al</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>al</td>\n",
+       "      <td>SCONJ</td>\n",
+       "      <td>al</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>alles</td>\n",
+       "      <td>PRON</td>\n",
+       "      <td>alles</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>alles</td>\n",
+       "      <td>PRON OR DET</td>\n",
+       "      <td>alles</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>als</td>\n",
+       "      <td>SCONJ</td>\n",
+       "      <td>als</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>als</td>\n",
+       "      <td>SCONJ OR CCONJ</td>\n",
+       "      <td>als</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>als</td>\n",
+       "      <td>None</td>\n",
+       "      <td>als</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>als</td>\n",
+       "      <td>None</td>\n",
+       "      <td>alse</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>alzo</td>\n",
+       "      <td>ADV</td>\n",
+       "      <td>also</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>alzo</td>\n",
+       "      <td>ADV</td>\n",
+       "      <td>alse</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>alzulk</td>\n",
+       "      <td>PRON</td>\n",
+       "      <td>alsuilker</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>amos</td>\n",
+       "      <td>PROPN</td>\n",
+       "      <td>amos</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>amsterdam</td>\n",
+       "      <td>None</td>\n",
+       "      <td>amsterdam</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>ander</td>\n",
+       "      <td>ADJ</td>\n",
+       "      <td>ander</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>ander</td>\n",
+       "      <td>ADJ</td>\n",
+       "      <td>andre</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>ander</td>\n",
+       "      <td>ADJ</td>\n",
+       "      <td>andren</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>652</th>\n",
+       "      <td>zijn</td>\n",
+       "      <td>PRON</td>\n",
+       "      <td>sir</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>653</th>\n",
+       "      <td>zijn</td>\n",
+       "      <td>PRON OR DET</td>\n",
+       "      <td>sijn</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>654</th>\n",
+       "      <td>zijn</td>\n",
+       "      <td>VERB</td>\n",
+       "      <td>is</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>655</th>\n",
+       "      <td>zijn</td>\n",
+       "      <td>VERB</td>\n",
+       "      <td>ware</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>656</th>\n",
+       "      <td>zijn</td>\n",
+       "      <td>VERB</td>\n",
+       "      <td>was</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>657</th>\n",
+       "      <td>zijn</td>\n",
+       "      <td>VERB</td>\n",
+       "      <td>geweest,</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>658</th>\n",
+       "      <td>zijn</td>\n",
+       "      <td>VERB</td>\n",
+       "      <td>sijn</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>659</th>\n",
+       "      <td>zijn</td>\n",
+       "      <td>VERB</td>\n",
+       "      <td>bennen</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>660</th>\n",
+       "      <td>zijn</td>\n",
+       "      <td>VERB</td>\n",
+       "      <td>geweest</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>661</th>\n",
+       "      <td>zitten</td>\n",
+       "      <td>VERB</td>\n",
+       "      <td>sat</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>662</th>\n",
+       "      <td>zo</td>\n",
+       "      <td>ADV</td>\n",
+       "      <td>soo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>663</th>\n",
+       "      <td>zo</td>\n",
+       "      <td>ADV</td>\n",
+       "      <td>so</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>664</th>\n",
+       "      <td>zodanig</td>\n",
+       "      <td>ADV</td>\n",
+       "      <td>soodanig</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>665</th>\n",
+       "      <td>zodat</td>\n",
+       "      <td>SCONJ OR CCONJ</td>\n",
+       "      <td>dat</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>666</th>\n",
+       "      <td>zoet</td>\n",
+       "      <td>ADJ</td>\n",
+       "      <td>soete</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>667</th>\n",
+       "      <td>zoet</td>\n",
+       "      <td>ADJ</td>\n",
+       "      <td>soet</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>668</th>\n",
+       "      <td>zolen</td>\n",
+       "      <td>VERB</td>\n",
+       "      <td>sollen</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>669</th>\n",
+       "      <td>zoveel</td>\n",
+       "      <td>PRON OR DET</td>\n",
+       "      <td>soo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>670</th>\n",
+       "      <td>zoveel</td>\n",
+       "      <td>PRON OR DET</td>\n",
+       "      <td>veel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>671</th>\n",
+       "      <td>zuidzijde</td>\n",
+       "      <td>NOUN</td>\n",
+       "      <td>zuud zide</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>672</th>\n",
+       "      <td>zuidzijde</td>\n",
+       "      <td>NOUN</td>\n",
+       "      <td>zuudzide</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>673</th>\n",
+       "      <td>zulk</td>\n",
+       "      <td>PRON</td>\n",
+       "      <td>selkes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>674</th>\n",
+       "      <td>zulks</td>\n",
+       "      <td>PRON OR DET</td>\n",
+       "      <td>sulks</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>675</th>\n",
+       "      <td>zullen</td>\n",
+       "      <td>AUX</td>\n",
+       "      <td>sal.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>676</th>\n",
+       "      <td>zullen</td>\n",
+       "      <td>AUX</td>\n",
+       "      <td>sullen</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>677</th>\n",
+       "      <td>zullen</td>\n",
+       "      <td>VERB</td>\n",
+       "      <td>sal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>678</th>\n",
+       "      <td>zullen</td>\n",
+       "      <td>VERB</td>\n",
+       "      <td>zal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>679</th>\n",
+       "      <td>zullen</td>\n",
+       "      <td>VERB</td>\n",
+       "      <td>soude</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>680</th>\n",
+       "      <td>zwaard</td>\n",
+       "      <td>NOUN</td>\n",
+       "      <td>suard.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>681</th>\n",
+       "      <td>zwart</td>\n",
+       "      <td>ADJ</td>\n",
+       "      <td>swarte</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>682 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                lemma universal_dependency         word\n",
+       "0                 aan                  ADP           an\n",
+       "1             aandoen                 VERB  an ghedaen.\n",
+       "2            aankomen                 VERB       koomen\n",
+       "3            aanlopen                 VERB          aen\n",
+       "4            aanlopen                 VERB       loopen\n",
+       "5               aarde                 NOUN        arden\n",
+       "6               aarde                 NOUN         erde\n",
+       "7             accijns                 NOUN       assize\n",
+       "8    achtentwintigste                  NUM           28\n",
+       "9                  af                  ADP           af\n",
+       "10                 al                  ADV           al\n",
+       "11                 al                  NUM         alle\n",
+       "12                 al                  NUM          al.\n",
+       "13                 al                 PRON         alre\n",
+       "14                 al          PRON OR DET           al\n",
+       "15                 al                SCONJ           al\n",
+       "16              alles                 PRON        alles\n",
+       "17              alles          PRON OR DET        alles\n",
+       "18                als                SCONJ          als\n",
+       "19                als       SCONJ OR CCONJ          als\n",
+       "20                als                 None          als\n",
+       "21                als                 None         alse\n",
+       "22               alzo                  ADV         also\n",
+       "23               alzo                  ADV         alse\n",
+       "24             alzulk                 PRON    alsuilker\n",
+       "25               amos                PROPN         amos\n",
+       "26          amsterdam                 None    amsterdam\n",
+       "27              ander                  ADJ        ander\n",
+       "28              ander                  ADJ        andre\n",
+       "29              ander                  ADJ       andren\n",
+       "..                ...                  ...          ...\n",
+       "652              zijn                 PRON          sir\n",
+       "653              zijn          PRON OR DET         sijn\n",
+       "654              zijn                 VERB           is\n",
+       "655              zijn                 VERB         ware\n",
+       "656              zijn                 VERB          was\n",
+       "657              zijn                 VERB     geweest,\n",
+       "658              zijn                 VERB         sijn\n",
+       "659              zijn                 VERB       bennen\n",
+       "660              zijn                 VERB      geweest\n",
+       "661            zitten                 VERB          sat\n",
+       "662                zo                  ADV          soo\n",
+       "663                zo                  ADV           so\n",
+       "664           zodanig                  ADV     soodanig\n",
+       "665             zodat       SCONJ OR CCONJ          dat\n",
+       "666              zoet                  ADJ        soete\n",
+       "667              zoet                  ADJ         soet\n",
+       "668             zolen                 VERB       sollen\n",
+       "669            zoveel          PRON OR DET          soo\n",
+       "670            zoveel          PRON OR DET         veel\n",
+       "671         zuidzijde                 NOUN    zuud zide\n",
+       "672         zuidzijde                 NOUN     zuudzide\n",
+       "673              zulk                 PRON       selkes\n",
+       "674             zulks          PRON OR DET        sulks\n",
+       "675            zullen                  AUX         sal.\n",
+       "676            zullen                  AUX       sullen\n",
+       "677            zullen                 VERB          sal\n",
+       "678            zullen                 VERB          zal\n",
+       "679            zullen                 VERB        soude\n",
+       "680            zwaard                 NOUN       suard.\n",
+       "681             zwart                  ADJ       swarte\n",
+       "\n",
+       "[682 rows x 3 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from chaininglib.ui.dfui import display_df\n",
+    "from chaininglib.process.corpus import extract_lexicon\n",
+    "from chaininglib.search.CorpusQuery import *\n",
+    "from chaininglib.search.LexiconQuery import *\n",
+    "\n",
+    "dfs_all_corpora = []\n",
+    "\n",
+    "for one_corpus in get_available_corpora():\n",
+    "    print('querying '+one_corpus+'...')\n",
+    "    c = create_corpus(one_corpus).lemma(\"lopen\").detailed_context(True)\n",
+    "    df_corpus = c.results() \n",
+    "    \n",
+    "    # store the results\n",
+    "    dfs_all_corpora.append(df_corpus)\n",
+    "\n",
+    "# extract lexicon and show the result\n",
+    "extracted_lexicon = extract_lexicon(dfs_all_corpora, posColumnName=\"universal_dependency\")\n",
+    "display(extracted_lexicon)"
+   ]
   },
   {
    "cell_type": "code",
