added verb+object query

--- a/Chaining search.ipynb
+++ b/Chaining search.ipynb
@@ -831,76 +831,72 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Case study 13: search treebank with some pattern"
+    "## Case study 13: Demonstrate treebank functionality"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-27T13:08:18.613024Z",
-     "start_time": "2019-02-27T13:08:18.206920Z"
+     "end_time": "2019-02-28T16:20:15.844270Z",
+     "start_time": "2019-02-28T16:18:04.518545Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "search...\n",
-      "xquery //node[@pos=\"N(soort,ev,basis,onz,stan)\"]\n",
-      "\u001b[Fget XML...                                                          \n",
-      "get trees and their string representations...\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: []\n",
-       "Index: []"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from chaininglib.search.TreebankQuery import *\n",
     "\n",
     "\n",
     "print (\"search...\")\n",
     "\n",
-    "# TODO: not working yet: tbq = create_treebank().pos(r'N(soort,ev,basis,onz,stan)').search()\n",
+    "# TODO: POS not working yet: tbq = create_treebank().pos(r'N(soort,ev,basis,onz,stan)').search()\n",
+    "tbq = create_treebank().pos(\"ww\").search()\n",
     "#tbq = create_treebank().pattern(\"xquery //node[@cat='pp' and node[@cat='ap' and node[@cat='np']]]\").search()\n",
-    "#tbq = create_treebank().pattern(\"xquery //node[@cat='ap' and node[@cat='np']]\").search()\n",
+    "\n",
+    "print (\"get XML...\")\n",
+    "\n",
+    "xml = tbq.xml()\n",
+    "#print(xml)\n",
+    "\n",
+    "print (\"get trees and their string representations...\")\n",
+    "\n",
+    "trees = tbq.trees()\n",
+    "\n",
+    "for tree in trees:\n",
+    "    display(tree.toString(posTag=True))\n",
+    "\n",
+    "df = tbq.kwic()\n",
+    "    \n",
+    "display(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Case study 14: Which objects of verb *geven* occur?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-02-28T16:27:29.178199Z",
+     "start_time": "2019-02-28T16:27:24.437229Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from chaininglib.search.TreebankQuery import *\n",
+    "\n",
+    "\n",
+    "print (\"search...\")\n",
+    "\n",
+    "# TODO: POS not working yet: tbq = create_treebank().pos(r'N(soort,ev,basis,onz,stan)').search()\n",
+    "#tbq = create_treebank().word(\"kat\").search()\n",
+    "tbq = create_treebank().pattern(r'xquery //node[node[@rel=\"hd\" and @pt=\"ww\" and @root=\"geven\"] and node[@rel=\"obj1\" and @pt=\"n\"]]').search()\n",
     "\n",
     "print (\"get XML...\")\n",
     "\n",
