Split into two notebooks

--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -4,13 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Chaining search\n",
+    "# Examples Chaining search\n",
+    "This notebook contains a number of examples of chaining linguistic resources: corpora, lexica and treebanks. Try the examples, or copy the code and modify it yourself in the [Sandbox](Sandbox.ipynb).\n",
     "\n",
-    "\n",
-    "\n",
-    "## Sphinx documentatie: https://pythonhosted.org/an_example_pypi_project/sphinx.html\n",
-    "## in voorbeelden handige python functies opnemen\n",
-    "## zoals ; .sort_values(ascending=False,by=['raw_freq']));  list enz\n"
+    "## List of examples\n",
+    " * [Corpus search](#Corpus-search)\n",
+    " * [Lexicon search](#Lexicon-search)\n"
    ]
   },
   {
@@ -925,9 +924,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env",
+   "display_name": "cs_env",
    "language": "python",
-   "name": "env"
+   "name": "cs_env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -939,7 +938,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
