--- a/Sandbox.ipynb
+++ b/Sandbox.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# Sandbox *Chaining search*\n",
     "\n",
-    "Use this notebook to combine linguistic resources yourself: corpora, lexica and treebanks. For inspiration, and to re-use code, please refer to the [Examples notebook](Examples.ipynb)."
+    "Use this notebook to combine linguistic resources yourself: corpora, lexica and treebanks. \n",
+    " * Use methods from our library *chaininglib*, which is described HERE\n",
+    " * To get an idea of the possibilities and to copy code, go to the [Examples notebook](Examples.ipynb)."
    ]
   },
   {
@@ -14,14 +16,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import chaininglib"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cs_env",
+   "display_name": "env",
    "language": "python",
-   "name": "cs_env"
+   "name": "env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -33,7 +37,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
