Added documentation, updated install scripts

--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Examples Chaining search\n",
-    "This notebook contains a number of examples of chaining linguistic resources: corpora, lexica and treebanks. Try the examples, or copy the code and customize the examples in the [Sandbox](Sandbox.ipynb).\n"
+    "# *Chaining search*: Examples\n",
+    "This notebook contains a number of examples of chaining linguistic resources: corpora, lexica and treebanks. Try the examples, or copy the code and customize the examples in the [Sandbox](Sandbox.ipynb). To get more information on how to invoke methods in the library, [please refer to the documentation](doc/_build/html/index.html).\n"
    ]
   },
   {
