--- a/Sandbox.ipynb
+++ b/Sandbox.ipynb
@@ -4,10 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Sandbox *Chaining search*\n",
+    "# *Chaining search*: Sandbox\n",
     "\n",
     "Use this notebook to combine linguistic resources yourself: corpora, lexica and treebanks. \n",
-    " * Use methods from our library *chaininglib*, which is described HERE\n",
+    " * Use methods from our library *chaininglib*, [described in the documentation](doc/_build/html/index.html)\n",
     " * To get an idea of the possibilities and to copy code, go to the [Examples notebook](Examples.ipynb)."
    ]
   },
