Added extract function for treebanks

--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -947,19 +947,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Which objects of verb *geven* occur? <a class=\"anchor\" id=\"treebank-objects-geven\"></a>"
+    "### Which kind of nouns are used in a prepositional complement of the verb *geven* ? <a class=\"anchor\" id=\"treebank-objects-geven\"></a>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-02-28T16:27:29.178199Z",
      "start_time": "2019-02-28T16:27:24.437229Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "search...\n",
+      "\u001b[Fget list of nouns which are part of an PP, as argument of predicate 'geven'...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['een Miele',\n",
+       " 'de Davondsfonds-leden',\n",
+       " 'de -bestuursleden',\n",
+       " 'de ontwikkeling van lokale Nederlandstalige educatieve software',\n",
+       " 'de verdediging',\n",
+       " 'de glastelers',\n",
+       " 'haar woede',\n",
+       " 'één stuk',\n",
+       " 'de computer',\n",
+       " 'de kampen die  komen te in Amsterdam Groningen Rotterdam en Tilburg staan',\n",
+       " 'het jaar',\n",
+       " 'ene kamp',\n",
+       " 'veranderingen in de school',\n",
+       " \"'t conservatorium als basis\"]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from chaininglib.search.TreebankQuery import *\n",
     "\n",
@@ -969,17 +1000,28 @@
     "tbq = create_treebank().pattern(r'xquery //node[node[@rel=\"hd\" and @pt=\"ww\" and @root=\"geven\"] and node[@rel=\"obj1\" and @pt=\"n\"]]').search()\n",
     "\n",
     "\n",
-    "print (\"get trees and their string representations...\")\n",
+    "print (\"get list of nouns which are part of an PP, as argument of predicate 'geven'...\")\n",
     "\n",
     "trees = tbq.trees()\n",
     "\n",
-    "#for tree in trees:\n",
-    "#    display(tree.toString())\n",
-    "\n",
-    "df = tbq.kwic(align_lemma='geven')\n",
+    "list_of_nouns = []\n",
+    "for tree in trees:\n",
+    "    nouns = tree.extract(['pp', 'np'])\n",
+    "    list_of_nouns = list_of_nouns + nouns\n",
     "    \n",
+    "\n",
+    "display(list_of_nouns)\n",
+    "    \n",
+    "df = tbq.kwic(align_lemma='geven')\n",
     "display(df)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
